--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -24,6 +24,9 @@ on:
       - "testsuite/replay_verify.py"
   schedule:
     - cron: "0 8,20 * * *"
+  push:
+    branches:
+      - aptos-release-v* # the aptos release branches
 
 # cancel redundant builds
 concurrency:
