--- a/.github/workflows/replay-verify.yaml
+++ b/.github/workflows/replay-verify.yaml
@@ -27,6 +27,7 @@ on:
   push:
     branches:
       - aptos-release-v* # the aptos release branches
+      - aptos-node-v*
 
 # cancel redundant builds
 concurrency:
