[Quorum Store] sign the author along with the digest (#6709)
### Description

Incentives needs a batch author. We add it to the signed digest info, so the proof of store signatures guarantee that the author is not forged.

### Test Plan

Existing tests.

--- a/testsuite/generate-format/tests/staged/consensus.yaml
+++ b/testsuite/generate-format/tests/staged/consensus.yaml
@@ -414,7 +414,7 @@ Signature:
 SignedDigest:
   STRUCT:
     - epoch: U64
-    - peer_id:
+    - signer:
         TYPENAME: AccountAddress
     - info:
         TYPENAME: SignedDigestInfo
@@ -422,6 +422,8 @@ SignedDigest:
         TYPENAME: Signature
 SignedDigestInfo:
   STRUCT:
+    - batch_author:
+        TYPENAME: AccountAddress
     - digest:
         TYPENAME: HashValue
     - expiration:
