--- a/testsuite/forge/Cargo.toml
+++ b/testsuite/forge/Cargo.toml
@@ -41,8 +41,8 @@ hyper = { workspace = true }
 hyper-tls = { workspace = true }
 itertools = { workspace = true }
 json-patch = { workspace = true }
-k8s-openapi = { workspace = true }
-kube = { workspace = true }
+k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
+kube = { version = "0.65.0", default-features = false, features = ["jsonpatch", "client", "rustls-tls"] }
 num_cpus = { workspace = true }
 once_cell = { workspace = true }
 prometheus-http-query = { workspace = true }
